<resources>
    <string name="app_name">MobileImage SDK Barcode Sample</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Barcodes settings</string>

    <string name="pref_header_about">About</string>
    <string name="pref_header_license">License Agreement</string>

    <string name="pref_header_barcodes">Barcodes types</string>
    <string name="pref_title_code_39">Code39</string>
    <string name="pref_title_pdf_417">PDF417</string>
    <string name="pref_title_qr">QR Code</string>
    <string name="pref_title_datamatrix">DataMatrix</string>
    <string name="pref_title_code_128">Code128</string>
    <string name="pref_title_code_25">Code25</string>
    <string name="pref_title_ean">EAN</string>
    <string name="pref_title_upc">UPC</string>
    <string name="pref_title_codabar">Codabar</string>
    <string name="pref_title_aztec">Aztec</string>
    <string name="pref_title_code_93">Code93</string>

    <string name="title_activity_license_agreement">LicenseAgreementActivity</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_barcode_info">Barcode Information</string>

    <string name="permissions_rationale">MobileImage SDK Barcode Sample needs camera permission.</string>
    <string name="camera_unavailable">Camera Unavailable</string>
    <string name="title_activity_barcode_info">BarcodeInfoActivity</string>

    <string name="menu_option_settings_title">Settings</string>
    <string name="menu_option_about_title">About</string>
    <string name="menu_option_lic_agreement_title">License Agreement</string>

    <string name="monthly_limit_exceeded_msg">MobileImage SDK Barcode Sample monthly usage limit (%d) is exceeded.</string>
    <string name="license_expired_error_msg">License is expired.</string>
    <string name="license_invalid_error_msg">License is invalid.</string>
     
</resources>
