<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_code_39"
        android:title="@string/pref_title_code_39" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_pdf_417"
        android:title="@string/pref_title_pdf_417" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_qr"
        android:title="@string/pref_title_qr" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_datamatrix"
        android:title="@string/pref_title_datamatrix" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_code_128"
        android:title="@string/pref_title_code_128" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_code_25"
        android:title="@string/pref_title_code_25" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_ean"
        android:title="@string/pref_title_ean" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_upc"
        android:title="@string/pref_title_upc" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_codabar"
        android:title="@string/pref_title_codabar" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_aztec"
        android:title="@string/pref_title_aztec" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_key_code_93"
        android:title="@string/pref_title_code_93" />

</PreferenceScreen>